Persona alignment fix complete

--- a/css/styles.css
+++ b/css/styles.css
@@ -192,6 +192,12 @@ strong{
   margin-bottom: 2.8rem;
 }
 
+.per_ul {
+  list-style: disc;
+  margin-left: 1.6rem;
+  margin-bottom: 2.4rem;
+}
+
 li p {
   margin-bottom: 1.2rem;
 }
@@ -980,8 +986,7 @@ padding: 0 6.4vw;
 /** Personas **/
 
 .pers_cont {
-  background-color: #F2EFED;
-  padding-top: 4rem;
+
 }
 
 .persona {
@@ -995,18 +1000,20 @@ padding: 0 6.4vw;
   color: #fff;
   display: flex;
   justify-content: space-between;
-  padding: 4rem 2.4rem;
+  padding: 4rem 6.4vw;
 }
 
 .per_shell {
   background-color: #fff;
+  border-left: .2rem solid #F2EFED;
+  border-right: .2rem solid #F2EFED;
   display: flex;
   justify-content: center;
-  padding: 0 2.4rem 4rem 2.4rem;
+  padding: 0 6.4vw 4rem 6.4vw;
 }
 
 .per_shell p {
-  max-width: 40rem;
+  max-width: 56rem;
 }
 
 .per_grid {
@@ -1842,6 +1849,12 @@ textarea {
     grid-area: 1/5/1/6;
   }
 
+
+  /** Persona **/
+
+
+  /** User Story **/
+
   .us_table {
     max-width: 71.4rem;
   }
@@ -2550,25 +2563,29 @@ textarea {
     grid-area: 1/4/1/10;
   }
 
+  .per_shell {
+    align-items: center;
+    padding: 0 2.4rem 4rem 2.4rem;
+  }
+
   .pers_cont {
-    display: grid;
+    display: flex;
     grid-area: 2/1/2/13;
-    grid-column-gap: 1.2rem;
-    grid-template-columns: repeat(12, 1fr);
-    padding: 7.2rem 0;
+    padding: 0 9.2vw;
+  }
+
+  .per_h_left {
+    border-right: .2rem solid #FFF;
+  }
+
+  .per_right {
+    border-left: none;
   }
 
   .persona {
     padding-bottom: 0;
   }
 
-  .pers_two {
-    grid-area: 1/7/1/12;
-  }
-
-  .pers_one {
-    grid-area: 1/2/1/7;
-  }
 
   /** user stories **/
 
